# flexpart_convert

./: .gitignore  LICENSE  pyproject.toml
src/flexpart_convert/: __init__.py  cli.py  converter.py  flexpart_convert.py
tests/: conftest.py  test_cli.py  test_converter.py
tests/test_data/: grid_conc_20210905000000.nc
