[project]
name = "flexpart-convert"
version = "0.1.0"
authors = [
    {name = "tcarion",email = "tristancarion@gmail.com"}
]
description = "Convert the FLEXPART Lagrangian outputs from netCDF to other geo format (geotif, kml, geojson) "
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "netcdf4 (>=1.7.2,<2.0.0)",
    "xarray (>=2025.4.0,<2026.0.0)",
    "rioxarray (>=0.19.0,<0.20.0)"
]

[project.scripts]
flexpart_convert = "flexpart_convert.cli:main"

[project.urls]
Homepage = "https://github.com/tcarion/flexpart_convert"
Issues = "https://github.com/tcarion/flexpart_convert/issues"

[tool.poetry]
packages = [{include = "flexpart_convert", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
